lesson 18, http post get

--- a/AlishevSpringMVC/AlishevSpringMVC/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/AlishevSpringMVC/AlishevSpringMVC/src/main/webapp/WEB-INF/views/first/hello.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 Hello!<br>
-<a href="goodbye.html">say goodbye</a><br>
+<a href="goodbye">say goodbye</a><br>
 <a href="exit.html">exit</a>
 </body>
 </html>
