--- a/AlishevSpringMVC/AlishevSpringMVC/src/main/webapp/WEB-INF/views/first/goodbye.html
+++ b/AlishevSpringMVC/AlishevSpringMVC/src/main/webapp/WEB-INF/views/first/goodbye.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 Goodbye!<br>
-<a href="hello.html">say hello</a><br>
+<a href="hello">say hello</a><br>
 <a href="exit.html">exit</a>
 </body>
 </html>
