--- a/AlishevSpringMVC/AlishevSpringMVC/src/main/webapp/WEB-INF/views/first/goodbye.html
+++ b/AlishevSpringMVC/AlishevSpringMVC/src/main/webapp/WEB-INF/views/first/goodbye.html
@@ -7,6 +7,7 @@
 <body>
 Goodbye!<br>
 <a href="hello">say hello</a><br>
+<a href="hello?name=Tom&surname=Jones">hello with parameters</a><br>
 <a href="exit.html">exit</a>
 </body>
 </html>
